About to switch to closures for x,y click

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
         <div id="smiley" class="smiley" onmousedown="smileyDown(`down`);" onmouseup="smileyUp(`down`);" onclick="startGame();"></div>
         
         <div id="minefield" onmousedown="smileyDown(`limbo`);" onmouseup="smileyUp(`limbo`);"></div>
+        <div id="result"> </div>
+
     </body>
 </html>
